manifests/terminal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose --file docker-compose.yaml convert
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: terminal
  name: terminal
spec:
  replicas: 2
  selector:
    matchLabels:
      io.kompose.service: terminal
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose --file docker-compose.yaml convert
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: terminal
    spec:
      imagePullSecrets:
        - name: ghcr-secret2
      containers:
        - image: ghcr.io/tur-pve/rblog:sha-72ed967 # {"$imagepolicy": "flux-system:blog-policy"}
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:80
            failureThreshold: 5
            periodSeconds: 200
            timeoutSeconds: 200
          name: terminal
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
