manifests/terminal-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose --file docker-compose.yaml convert
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: terminal
  name: terminal
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: terminal
