manifests/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: terminal.app.r2b001.site
    http:
      paths:
      - backend:
          service:
            name: terminal
            port:
              number: 3000
        path: /
        pathType: Prefix
